menambahkan fitur mengirim reminder ke email user

--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-    DATABASE_URL="mysql://root:@localhost:3306/backenddev"
-    JWT_SECRET=JWT_SECRET
+DATABASE_URL="mysql://root:@localhost:3306/backenddev"
+JWT_SECRET=JWT_SECRET
+GMAIL_USER=anumuti021@gmail.com
+GMAIL_PASS=ilwm hjch chpz qlkk
